# ==================================================
# vars

config("crc32c_config") {
  include_dirs = [ "include" ]
}

static_library("crc32c") {
  include_dirs = [ "config-include" ] # private
  sources = [
    "include/crc32c/crc32c.h",
    "config-include/crc32c/crc32c_config.h",
    "src/crc32c_arm64.h",
    "src/crc32c_arm64_check.h",
    "src/crc32c_internal.h",
    "src/crc32c_portable.cc",
    "src/crc32c_prefetch.h",
    "src/crc32c_read_le.h",
    "src/crc32c_round_up.h",
    "src/crc32c_sse42.h",
    "src/crc32c_sse42_check.h",
    "src/crc32c.cc",
  ]
  
  if (is_mac && target_cpu == "arm64") {
    sources += [
      "src/crc32c_arm64.cc",
      "src/crc32c_arm64.h",
    ]
  }
  
  public_configs = [ ":crc32c_config" ]
}

#executable("test_crc32c") {
#  testonly = true
#  sources = [ "test_crc32c.cpp" ]
#  deps = [
#    ":gtest_main",
#    ":crc32c"
#  ]
#}

# TODO needs google-benchmark

#executable("test_crc32c_unit") {
#  testonly = true
#  sources = [ "crc32c_unittest.cc" ]
#  deps = [ ":crc32c" ]
#}

#executable("test_crc32c_gtest") {
#  testonly = true
#  sources = [ "crc32c-test.cc" ]
#  deps = [
#    ":gtest_main",
#  ]
#}
